# dinterpol

./: .gitignore  Pipfile  README.md  README.rst  setup.cfg  setup.py  tox.ini
dinterpol/: __init__.py  about.py  attr2key.py  template.py  test_attr2key.py  test_attribute_convert.py  test_template.py
git-hooks/: pre-commit
scripts/: release.sh
