[metadata]
name =  dinterpol
url = https://github.com/OpenPipe/dinterpol
author = João Pinto
author_email = lamego.pinto@gmail.com
summary = data interpolation templating engine
version = attr: dinterpol.VERSION
description = python library and a command line utility for data interpolation
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
install_requires =
    pyyaml
    click


[options.package_data]
* = *.txt, *.rst


