[metadata]
name =  dinterpol
version = attr: dinterpol.about,__version__
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
install_requires =
    pyyaml
    click


